--- a/proyectos.html
+++ b/proyectos.html
@@ -13,145 +13,130 @@
     <meta name="description" content="Plataforma para aprender sobre desarrollo web gratis.">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/droid_serifbold.css">
+    <link rel="stylesheet" href="assets/css/droid_serifbold_italic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifitalic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifregular.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Features-Minimal-icons.css">
     <link rel="stylesheet" href="assets/css/Projects-Grid-images.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
-    <div class="container"><a class="navbar-brand logo" href="index.html">ADSO DEVELOPERS</a>
-        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
-                class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
-                <li class="nav-item"><a class="nav-link active" href="proyectos.html">PROYECTOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
-                <li class="nav-item"><a class="nav-link" href="contactanos.html">CONTÁCTANOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<main class="page gallery-page">
-    <section class="clean-block clean-gallery dark">
-        <!-- Start: Projects Grid -->
-        <div class="container py-4 py-xl-5">
-            <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2 class="text-info">Explora Nuestros Proyectos</h2>
-                    <p>¡Bienvenido a nuestra página de Proyectos! Aquí te invitamos a explorar y conocer los
-                        emocionantes proyectos que nuestro equipo de desarrollo y colaboradores han creado con pasión y
-                        dedicación. Estos proyectos representan el resultado de un arduo trabajo y un compromiso
-                        continuo con la innovación en el campo del desarrollo web. ¡Echa un vistazo y descubre lo que
-                        hemos logrado juntos!</p>
-                </div>
-            </div>
-            <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col">
-                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;"
-                              src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
-                        <div class="py-4">
-                            <h4>Gallinas Ponedoras</h4>
-                            <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac
-                                facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;"
-                              src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
-                        <div class="py-4">
-                            <h4>Lorem libero donec</h4>
-                            <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac
-                                facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;"
-                              src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
-                        <div class="py-4">
-                            <h4>Lorem libero donec</h4>
-                            <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac
-                                facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;"
-                              src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
-                        <div class="py-4">
-                            <h4>Lorem libero donec</h4>
-                            <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac
-                                facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!-- End: Projects Grid -->
-    </section>
-</main><!-- Start: Footer Dark -->
-<footer class="page-footer dark">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <h5>Comienza</h5>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="registrarse.html">Registrarse</a></li>
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Sobre Nosotros</h5>
-                <ul>
-                    <li><a href="conocenos.html">Información del equipo</a></li>
-                    <li><a href="contactanos.html">Contáctanos</a></li>
-                    <li><a href="#">Reseñas</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Soporte</h5>
-                <ul>
-                    <li><a href="faq.html">Preguntas frecuentes</a></li>
-                    <li><a href="#">Ayudas</a></li>
-                    <li><a href="#">Foros</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Legal</h5>
-                <ul>
-                    <li><a href="#">Términos de servicio</a></li>
-                    <li><a href="#">Términos de uso</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
+    <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
+        <div class="container"><a class="navbar-brand logo-mobile logo" data-bss-hover-animate="pulse" href="index.html"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="proyectos.html">PROYECTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactanos.html">CONTÁCTANOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="footer-copyright">
-        <p>© 2023 Dejatori</p>
-    </div>
-</footer><!-- End: Footer Dark -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/baguetteBox.min.js"></script>
-<script src="assets/js/vanilla-zoom.js"></script>
-<script src="assets/js/theme.js"></script>
+    </nav>
+    <main class="page gallery-page">
+        <section class="clean-block clean-gallery dark">
+            <!-- Start: Projects Grid -->
+            <div class="container py-4 py-xl-5">
+                <div class="row mb-5">
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2 class="text-info">Explora Nuestros Proyectos</h2>
+                        <p>¡Bienvenido a nuestra página de Proyectos! Aquí te invitamos a explorar y conocer los emocionantes proyectos que nuestro equipo de desarrollo y colaboradores han creado con pasión y dedicación. Estos proyectos representan el resultado de un arduo trabajo y un compromiso continuo con la innovación en el campo del desarrollo web. ¡Echa un vistazo y descubre lo que hemos logrado juntos!</p>
+                    </div>
+                </div>
+                <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+                    <div class="col">
+                        <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
+                            <div class="py-4">
+                                <h4>Gallinas Ponedoras</h4>
+                                <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
+                            <div class="py-4">
+                                <h4>Lorem libero donec</h4>
+                                <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
+                            <div class="py-4">
+                                <h4>Lorem libero donec</h4>
+                                <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Sin imagen">
+                            <div class="py-4">
+                                <h4>Lorem libero donec</h4>
+                                <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- End: Projects Grid -->
+        </section>
+    </main><!-- Start: Footer Dark -->
+    <footer class="page-footer dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Comienza</h5>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="registrarse.html">Registrarse</a></li>
+                        <li><a href="proyectos.html">Proyectos</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Sobre Nosotros</h5>
+                    <ul>
+                        <li><a href="conocenos.html">Información del equipo</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
+                        <li><a href="#">Reseñas</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Soporte</h5>
+                    <ul>
+                        <li><a href="faq.html">Preguntas frecuentes</a></li>
+                        <li><a href="#">Ayudas</a></li>
+                        <li><a href="#">Foros</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Legal</h5>
+                    <ul>
+                        <li><a href="#">Términos de servicio</a></li>
+                        <li><a href="#">Términos de uso</a></li>
+                        <li><a href="#">Política de privacidad</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>© 2023 Dejatori</p>
+        </div>
+    </footer><!-- End: Footer Dark -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/baguetteBox.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
