--- a/contactanos.html
+++ b/contactanos.html
@@ -13,121 +13,104 @@
     <meta name="description" content="Plataforma para aprender sobre desarrollo web gratis.">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/droid_serifbold.css">
+    <link rel="stylesheet" href="assets/css/droid_serifbold_italic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifitalic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifregular.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Features-Minimal-icons.css">
     <link rel="stylesheet" href="assets/css/Projects-Grid-images.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
-    <div class="container"><a class="navbar-brand logo" href="index.html">ADSO DEVELOPERS</a>
-        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
-                class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
-                <li class="nav-item"><a class="nav-link" href="proyectos.html">PROYECTOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
-                <li class="nav-item"><a class="nav-link active" href="contactanos.html">CONTÁCTANOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
-            </ul>
+    <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
+        <div class="container"><a class="navbar-brand logo-mobile logo" data-bss-hover-animate="pulse" href="index.html"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="proyectos.html">PROYECTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contactanos.html">CONTÁCTANOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<main class="page contact-us-page">
-    <section class="clean-block clean-form dark">
+    </nav>
+    <main class="page contact-us-page">
+        <section class="clean-block clean-form dark">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info">Contáctanos<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-mailbox" style="padding: 0px 0px 10px 10px;transform: translate(10px) scale(1.50);">
+                            <path d="M4 4a3 3 0 0 0-3 3v6h6V7a3 3 0 0 0-3-3zm0-1h8a4 4 0 0 1 4 4v6a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V7a4 4 0 0 1 4-4zm2.646 1A3.99 3.99 0 0 1 8 7v6h7V7a3 3 0 0 0-3-3H6.646z"></path>
+                            <path d="M11.793 8.5H9v-1h5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.354-.146l-.853-.854zM5 7c0 .552-.448 0-1 0s-1 .552-1 0a1 1 0 0 1 2 0z"></path>
+                        </svg></h2>
+                    <p>Puedes hablar con nosotros por medio del siguiente formulario de contacto, revisaremos tu mensaje y te responderemos lo antes posible.</p>
+                </div>
+                <form data-bss-recipient="01b3633c3d4a6d8456d77b85880e0056">
+                    <div class="mb-3"><label class="form-label" for="name">Nombre</label><input class="form-control" type="text" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="right" id="name" name="name" data-bs-theme="light" title="Nombre y apellido, por favor" required="" minlength="4" maxlength="50"></div>
+                    <div class="mb-3"><label class="form-label" for="subject">Asunto</label><input class="form-control" type="text" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="right" id="subject" name="subject" data-bs-theme="light" title="Ejemplo: Solicitud de información" required="" minlength="4" maxlength="40"></div>
+                    <div class="mb-3"><label class="form-label" for="email">Correo</label><input class="form-control" type="email" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="right" id="email" name="email" data-bs-theme="light" title="Correo electrónico para responderte" required="" inputmode="email"></div>
+                    <div class="mb-3"><label class="form-label" for="message">Mensaje</label><textarea class="form-control" id="message" name="message" data-bs-theme="light" spellcheck="true" required="" minlength="20" maxlength="500"></textarea></div>
+                    <div class="text-center mb-3"><button class="btn btn-primary" data-bss-hover-animate="rubberBand" type="submit" style="margin: 0px;box-shadow: 2px 2px 0px 0px rgb(255,0,0);">Enviar</button></div>
+                </form>
+            </div>
+        </section>
+    </main><!-- Start: Footer Dark -->
+    <footer class="page-footer dark">
         <div class="container">
-            <div class="block-heading">
-                <h2 class="text-info">Contáctanos</h2>
-                <p>Puedes hablar con nosotros por medio del siguiente formulario de contacto, revisaremos tu mensaje y
-                    te responderemos lo antes posible.</p>
-            </div>
-            <form>
-                <div class="mb-3"><label class="form-label" for="name">Nombre</label><input class="form-control"
-                                                                                            type="text" id="name"
-                                                                                            name="name"
-                                                                                            data-bs-theme="light"></div>
-                <div class="mb-3"><label class="form-label" for="subject">Asunto</label><input class="form-control"
-                                                                                               type="text" id="subject"
-                                                                                               name="subject"
-                                                                                               data-bs-theme="light">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Comienza</h5>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="registrarse.html">Registrarse</a></li>
+                        <li><a href="proyectos.html">Proyectos</a></li>
+                    </ul>
                 </div>
-                <div class="mb-3"><label class="form-label" for="email">Correo</label><input class="form-control"
-                                                                                             type="email" id="email"
-                                                                                             name="email"
-                                                                                             data-bs-theme="light">
+                <div class="col-sm-3">
+                    <h5>Sobre Nosotros</h5>
+                    <ul>
+                        <li><a href="conocenos.html">Información del equipo</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
+                        <li><a href="#">Reseñas</a></li>
+                    </ul>
                 </div>
-                <div class="mb-3"><label class="form-label" for="message">Mensaje</label><textarea class="form-control"
-                                                                                                   id="message"
-                                                                                                   name="message"
-                                                                                                   data-bs-theme="light"></textarea>
+                <div class="col-sm-3">
+                    <h5>Soporte</h5>
+                    <ul>
+                        <li><a href="faq.html">Preguntas frecuentes</a></li>
+                        <li><a href="#">Ayudas</a></li>
+                        <li><a href="#">Foros</a></li>
+                    </ul>
                 </div>
-                <div class="mb-3">
-                    <button class="btn btn-primary" type="submit">Enviar</button>
+                <div class="col-sm-3">
+                    <h5>Legal</h5>
+                    <ul>
+                        <li><a href="#">Términos de servicio</a></li>
+                        <li><a href="#">Términos de uso</a></li>
+                        <li><a href="#">Política de privacidad</a></li>
+                    </ul>
                 </div>
-            </form>
-        </div>
-    </section>
-</main><!-- Start: Footer Dark -->
-<footer class="page-footer dark">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <h5>Comienza</h5>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="registrarse.html">Registrarse</a></li>
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Sobre Nosotros</h5>
-                <ul>
-                    <li><a href="conocenos.html">Información del equipo</a></li>
-                    <li><a href="contactanos.html">Contáctanos</a></li>
-                    <li><a href="#">Reseñas</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Soporte</h5>
-                <ul>
-                    <li><a href="faq.html">Preguntas frecuentes</a></li>
-                    <li><a href="#">Ayudas</a></li>
-                    <li><a href="#">Foros</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Legal</h5>
-                <ul>
-                    <li><a href="#">Términos de servicio</a></li>
-                    <li><a href="#">Términos de uso</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                </ul>
             </div>
         </div>
-    </div>
-    <div class="footer-copyright">
-        <p>© 2023 Dejatori</p>
-    </div>
-</footer><!-- End: Footer Dark -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/baguetteBox.min.js"></script>
-<script src="assets/js/vanilla-zoom.js"></script>
-<script src="assets/js/theme.js"></script>
+        <div class="footer-copyright">
+            <p>© 2023 Dejatori</p>
+        </div>
+    </footer><!-- End: Footer Dark -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/baguetteBox.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
