--- a/faq.html
+++ b/faq.html
@@ -13,178 +13,149 @@
     <meta name="description" content="Plataforma para aprender sobre desarrollo web gratis.">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/droid_serifbold.css">
+    <link rel="stylesheet" href="assets/css/droid_serifbold_italic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifitalic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifregular.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Features-Minimal-icons.css">
     <link rel="stylesheet" href="assets/css/Projects-Grid-images.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
-    <div class="container"><a class="navbar-brand logo" href="index.html">ADSO DEVELOPERS</a>
-        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
-                class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
-                <li class="nav-item"><a class="nav-link" href="proyectos.html">PROYECTOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
-                <li class="nav-item"><a class="nav-link" href="contactanos.html">CONTÁCTANOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
-            </ul>
+    <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
+        <div class="container"><a class="navbar-brand logo-mobile logo" data-bss-hover-animate="pulse" href="index.html"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="proyectos.html">PROYECTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactanos.html">CONTÁCTANOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<main class="page faq-page">
-    <section class="clean-block clean-faq dark">
+    </nav>
+    <main class="page faq-page">
+        <section class="clean-block clean-faq dark">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info">Preguntas Frecuentes (FAQ)</h2>
+                    <p>Esperamos que estas preguntas frecuentes te ayuden a comprender mejor nuestra plataforma y cómo aprovecharla. Si tienes más preguntas o necesitas asistencia adicional, no dudes en ponerte en contacto con nosotros a través de nuestro formulario de contacto.</p>
+                </div>
+                <div class="block-content">
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Qué es esta plataforma de práctica de desarrollo web?</strong></h4>
+                        <div class="answer">
+                            <p>Esta plataforma es un espacio en línea diseñado para ayudarte a mejorar tus habilidades de desarrollo web.<br>Ofrecemos recursos, ejercicios y proyectos para que los estudiantes y entusiastas del desarrollo web puedan aprender y practicar diferentes tecnologías y lenguajes de programación.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Cómo puedo comenzar a utilizar esta plataforma?</strong></h4>
+                        <div class="answer">
+                            <p>Es muy sencillo. Solo tienes que registrarte en nuestro sitio web y explorar los recursos disponibles.<br>Puedes elegir proyectos, seguir tutoriales y participar en ejercicios prácticos para mejorar tus habilidades.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Es necesario tener experiencia previa en desarrollo web para utilizar esta plataforma?</strong></h4>
+                        <div class="answer">
+                            <p>No, no es necesario tener experiencia previa en desarrollo web. Nuestra plataforma está diseñada para adaptarse a diferentes niveles de habilidad. Tenemos contenido desde nivel principiante hasta avanzado, por lo que puedes empezar desde donde te sientas más cómodo.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Cómo puedo contactar al equipo de desarrollo si tengo alguna pregunta o problema?</strong></h4>
+                        <div class="answer">
+                            <p>Puedes contactarnos a través de nuestro formulario de contacto en la sección "Contáctanos".<br>Estamos aquí para ayudarte y responder tus preguntas.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Ofrecen certificados o reconocimiento por completar los ejercicios o proyectos?</strong></h4>
+                        <div class="answer">
+                            <p>Actualmente, no ofrecemos certificados o reconocimiento formal por completar ejercicios o proyectos.<br>Sin embargo, puedes utilizar el conocimiento y las habilidades que adquieras aquí para mejorar tu currículum y portafolio personal.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Puedo contribuir al contenido de esta plataforma?</strong></h4>
+                        <div class="answer">
+                            <p>¡Claro! Apreciamos la colaboración de la comunidad.<br>Si tienes conocimientos que deseas compartir, puedes proponer ejercicios, tutoriales o proyectos. <br>Ponte en contacto con nosotros para discutir cómo puedes contribuir.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Esta plataforma es gratuita?</strong></h4>
+                        <div class="answer">
+                            <p>Sí, esta plataforma es completamente gratuita. <br>Nuestro objetivo es proporcionar recursos accesibles para todos los interesados en el desarrollo web.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Qué tecnologías y lenguajes de programación se cubren en esta plataforma?</strong></h4>
+                        <div class="answer">
+                            <p>Cubrimos una amplia gama de tecnologías y lenguajes de programación utilizados en el desarrollo web, incluyendo HTML, CSS, JavaScript, Bootstrap, PHP, y más. Regularmente actualizamos y agregamos contenido nuevo para mantenerte actualizado con las últimas tendencias y tecnologías.</p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <h4 class="question"><strong>¿Cómo puedo eliminar mi cuenta si decido no utilizar más esta plataforma?</strong></h4>
+                        <div class="answer">
+                            <p>Puedes eliminar tu cuenta en la sección de "Configuración de la Cuenta" en tu perfil de usuario.<br>Ten en cuenta que esto eliminará permanentemente tu información y registros en nuestro sitio web.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main><!-- Start: Footer Dark -->
+    <footer class="page-footer dark">
         <div class="container">
-            <div class="block-heading">
-                <h2 class="text-info">Preguntas Frecuentes (FAQ)</h2>
-                <p>Esperamos que estas preguntas frecuentes te ayuden a comprender mejor nuestra plataforma y cómo
-                    aprovecharla. Si tienes más preguntas o necesitas asistencia adicional, no dudes en ponerte en
-                    contacto con nosotros a través de nuestro formulario de contacto.</p>
-            </div>
-            <div class="block-content">
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Qué es esta plataforma de práctica de desarrollo web?</strong></h4>
-                    <div class="answer">
-                        <p>Esta plataforma es un espacio en línea diseñado para ayudarte a mejorar tus habilidades de
-                            desarrollo web.<br>Ofrecemos recursos, ejercicios y proyectos para que los estudiantes y
-                            entusiastas del desarrollo web puedan aprender y practicar diferentes tecnologías y
-                            lenguajes de programación.</p>
-                    </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Comienza</h5>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="registrarse.html">Registrarse</a></li>
+                        <li><a href="proyectos.html">Proyectos</a></li>
+                    </ul>
                 </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Cómo puedo comenzar a utilizar esta plataforma?</strong></h4>
-                    <div class="answer">
-                        <p>Es muy sencillo. Solo tienes que registrarte en nuestro sitio web y explorar los recursos
-                            disponibles.<br>Puedes elegir proyectos, seguir tutoriales y participar en ejercicios
-                            prácticos para mejorar tus habilidades.</p>
-                    </div>
+                <div class="col-sm-3">
+                    <h5>Sobre Nosotros</h5>
+                    <ul>
+                        <li><a href="conocenos.html">Información del equipo</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
+                        <li><a href="#">Reseñas</a></li>
+                    </ul>
                 </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Es necesario tener experiencia previa en desarrollo web para utilizar
-                        esta plataforma?</strong></h4>
-                    <div class="answer">
-                        <p>No, no es necesario tener experiencia previa en desarrollo web. Nuestra plataforma está
-                            diseñada para adaptarse a diferentes niveles de habilidad. Tenemos contenido desde nivel
-                            principiante hasta avanzado, por lo que puedes empezar desde donde te sientas más
-                            cómodo.</p>
-                    </div>
+                <div class="col-sm-3">
+                    <h5>Soporte</h5>
+                    <ul>
+                        <li><a href="faq.html">Preguntas frecuentes</a></li>
+                        <li><a href="#">Ayudas</a></li>
+                        <li><a href="#">Foros</a></li>
+                    </ul>
                 </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Cómo puedo contactar al equipo de desarrollo si tengo alguna pregunta
-                        o problema?</strong></h4>
-                    <div class="answer">
-                        <p>Puedes contactarnos a través de nuestro formulario de contacto en la sección
-                            "Contáctanos".<br>Estamos aquí para ayudarte y responder tus preguntas.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Ofrecen certificados o reconocimiento por completar los ejercicios o
-                        proyectos?</strong></h4>
-                    <div class="answer">
-                        <p>Actualmente, no ofrecemos certificados o reconocimiento formal por completar ejercicios o
-                            proyectos.<br>Sin embargo, puedes utilizar el conocimiento y las habilidades que adquieras
-                            aquí para mejorar tu currículum y portafolio personal.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Puedo contribuir al contenido de esta plataforma?</strong></h4>
-                    <div class="answer">
-                        <p>¡Claro! Apreciamos la colaboración de la comunidad.<br>Si tienes conocimientos que deseas
-                            compartir, puedes proponer ejercicios, tutoriales o proyectos. <br>Ponte en contacto con
-                            nosotros para discutir cómo puedes contribuir.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Esta plataforma es gratuita?</strong></h4>
-                    <div class="answer">
-                        <p>Sí, esta plataforma es completamente gratuita. <br>Nuestro objetivo es proporcionar recursos
-                            accesibles para todos los interesados en el desarrollo web.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Qué tecnologías y lenguajes de programación se cubren en esta
-                        plataforma?</strong></h4>
-                    <div class="answer">
-                        <p>Cubrimos una amplia gama de tecnologías y lenguajes de programación utilizados en el
-                            desarrollo web, incluyendo HTML, CSS, JavaScript, Bootstrap, PHP, y más. Regularmente
-                            actualizamos y agregamos contenido nuevo para mantenerte actualizado con las últimas
-                            tendencias y tecnologías.</p>
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <h4 class="question"><strong>¿Cómo puedo eliminar mi cuenta si decido no utilizar más esta
-                        plataforma?</strong></h4>
-                    <div class="answer">
-                        <p>Puedes eliminar tu cuenta en la sección de "Configuración de la Cuenta" en tu perfil de
-                            usuario.<br>Ten en cuenta que esto eliminará permanentemente tu información y registros en
-                            nuestro sitio web.</p>
-                    </div>
+                <div class="col-sm-3">
+                    <h5>Legal</h5>
+                    <ul>
+                        <li><a href="#">Términos de servicio</a></li>
+                        <li><a href="#">Términos de uso</a></li>
+                        <li><a href="#">Política de privacidad</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </section>
-</main><!-- Start: Footer Dark -->
-<footer class="page-footer dark">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <h5>Comienza</h5>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="registrarse.html">Registrarse</a></li>
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Sobre Nosotros</h5>
-                <ul>
-                    <li><a href="conocenos.html">Información del equipo</a></li>
-                    <li><a href="contactanos.html">Contáctanos</a></li>
-                    <li><a href="#">Reseñas</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Soporte</h5>
-                <ul>
-                    <li><a href="faq.html">Preguntas frecuentes</a></li>
-                    <li><a href="#">Ayudas</a></li>
-                    <li><a href="#">Foros</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Legal</h5>
-                <ul>
-                    <li><a href="#">Términos de servicio</a></li>
-                    <li><a href="#">Términos de uso</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                </ul>
-            </div>
+        <div class="footer-copyright">
+            <p>© 2023 Dejatori</p>
         </div>
-    </div>
-    <div class="footer-copyright">
-        <p>© 2023 Dejatori</p>
-    </div>
-</footer><!-- End: Footer Dark -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/baguetteBox.min.js"></script>
-<script src="assets/js/vanilla-zoom.js"></script>
-<script src="assets/js/theme.js"></script>
+    </footer><!-- End: Footer Dark -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/baguetteBox.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
