--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -13,119 +13,104 @@
     <meta name="description" content="Plataforma para aprender sobre desarrollo web gratis.">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg"
-          media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/iconos/favicon.svg" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/droid_serifbold.css">
+    <link rel="stylesheet" href="assets/css/droid_serifbold_italic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifitalic.css">
+    <link rel="stylesheet" href="assets/css/droid_serifregular.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Features-Minimal-icons.css">
     <link rel="stylesheet" href="assets/css/Projects-Grid-images.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
-    <div class="container"><a class="navbar-brand logo" href="index.html">ADSO DEVELOPERS</a>
-        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
-                class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
-                <li class="nav-item"><a class="nav-link" href="proyectos.html">PROYECTOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
-                <li class="nav-item"><a class="nav-link" href="contactanos.html">CONTÁCTANOS</a></li>
-                <li class="nav-item"><a class="nav-link active" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
-            </ul>
+    <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
+        <div class="container"><a class="navbar-brand logo-mobile logo" data-bss-hover-animate="pulse" href="index.html"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="proyectos.html">PROYECTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="conocenos.html">¿QUIÉNES SOMOS?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactanos.html">CONTÁCTANOS</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="iniciar-sesion.html">INICIAR SESIÓN</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<main class="page login-page">
-    <section class="clean-block clean-form dark">
+    </nav>
+    <main class="page login-page">
+        <section class="clean-block clean-form dark">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info">Iniciar Sesión</h2>
+                    <p>¡Bienvenido de vuelta! Para acceder a tu cuenta, ingresa tu correo electrónico y contraseña en los campos a continuación.</p>
+                </div>
+                <form>
+                    <div class="mb-3"><label class="form-label" for="email">Correo electrónico</label><input class="form-control item" type="email" id="email" data-bs-theme="light"></div>
+                    <div class="mb-3"><label class="form-label" for="password">Contraseña</label><input class="form-control" type="password" id="password" data-bs-theme="light"></div>
+                    <div class="mb-3">
+                        <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox" data-bs-theme="light"><label class="form-check-label" for="checkbox">Recuérdame</label></div>
+                    </div><button class="btn btn-primary" type="submit">Iniciar Sesión</button>
+                </form>
+                <div class="block-heading">
+                    <h2 class="text-info">¿Aún no Tienes una Cuenta?</h2>
+                    <p>Si aún no eres parte de nuestra comunidad, te invitamos a registrarte y comenzar tu viaje de aprendizaje en el desarrollo web. Únete a nosotros para acceder a una amplia gama de recursos y oportunidades para mejorar tus habilidades.</p><a class="btn btn-primary" role="button" href="registrarse.html" style="margin: 20px;">Registrarme</a>
+                </div>
+            </div>
+        </section>
+    </main><!-- Start: Footer Dark -->
+    <footer class="page-footer dark">
         <div class="container">
-            <div class="block-heading">
-                <h2 class="text-info">Iniciar Sesión</h2>
-                <p>¡Bienvenido de vuelta! Para acceder a tu cuenta, ingresa tu correo electrónico y contraseña en los
-                    campos a continuación.</p>
-            </div>
-            <form>
-                <div class="mb-3"><label class="form-label" for="email">Correo electrónico</label><input
-                        class="form-control item" type="email" id="email" data-bs-theme="light"></div>
-                <div class="mb-3"><label class="form-label" for="password">Contraseña</label><input class="form-control"
-                                                                                                    type="password"
-                                                                                                    id="password"
-                                                                                                    data-bs-theme="light">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Comienza</h5>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="registrarse.html">Registrarse</a></li>
+                        <li><a href="proyectos.html">Proyectos</a></li>
+                    </ul>
                 </div>
-                <div class="mb-3">
-                    <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox"
-                                                   data-bs-theme="light"><label class="form-check-label" for="checkbox">Recuérdame</label>
-                    </div>
+                <div class="col-sm-3">
+                    <h5>Sobre Nosotros</h5>
+                    <ul>
+                        <li><a href="conocenos.html">Información del equipo</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
+                        <li><a href="#">Reseñas</a></li>
+                    </ul>
                 </div>
-                <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
-            </form>
-            <div class="block-heading">
-                <h2 class="text-info">¿Aún no Tienes una Cuenta?</h2>
-                <p>Si aún no eres parte de nuestra comunidad, te invitamos a registrarte y comenzar tu viaje de
-                    aprendizaje en el desarrollo web. Únete a nosotros para acceder a una amplia gama de recursos y
-                    oportunidades para mejorar tus habilidades.</p><a class="btn btn-primary" role="button"
-                                                                      href="registrarse.html" style="margin: 20px;">Registrarme</a>
+                <div class="col-sm-3">
+                    <h5>Soporte</h5>
+                    <ul>
+                        <li><a href="faq.html">Preguntas frecuentes</a></li>
+                        <li><a href="#">Ayudas</a></li>
+                        <li><a href="#">Foros</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Legal</h5>
+                    <ul>
+                        <li><a href="#">Términos de servicio</a></li>
+                        <li><a href="#">Términos de uso</a></li>
+                        <li><a href="#">Política de privacidad</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </section>
-</main><!-- Start: Footer Dark -->
-<footer class="page-footer dark">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <h5>Comienza</h5>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="registrarse.html">Registrarse</a></li>
-                    <li><a href="proyectos.html">Proyectos</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Sobre Nosotros</h5>
-                <ul>
-                    <li><a href="conocenos.html">Información del equipo</a></li>
-                    <li><a href="contactanos.html">Contáctanos</a></li>
-                    <li><a href="#">Reseñas</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Soporte</h5>
-                <ul>
-                    <li><a href="faq.html">Preguntas frecuentes</a></li>
-                    <li><a href="#">Ayudas</a></li>
-                    <li><a href="#">Foros</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Legal</h5>
-                <ul>
-                    <li><a href="#">Términos de servicio</a></li>
-                    <li><a href="#">Términos de uso</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                </ul>
-            </div>
+        <div class="footer-copyright">
+            <p>© 2023 Dejatori</p>
         </div>
-    </div>
-    <div class="footer-copyright">
-        <p>© 2023 Dejatori</p>
-    </div>
-</footer><!-- End: Footer Dark -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/baguetteBox.min.js"></script>
-<script src="assets/js/vanilla-zoom.js"></script>
-<script src="assets/js/theme.js"></script>
+    </footer><!-- End: Footer Dark -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/baguetteBox.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
